Update User model and test configurations